<resources>
    <string name="app_name">ShoppingMall</string>
    <string name="g_001">唐麦 A8四核双动圈重低音耳机入耳式高音质手机有线耳塞k歌HiFi音乐安卓线控带麦吃鸡耳机通用男女</string>
    <string name="g_002">Xiaomi/小米 小米运动蓝牙耳机 青春版 双耳无线蓝牙耳塞式</string>
    <string name="g_003">Sony/索尼 WH-1000XM3 头戴式无线降噪蓝牙耳机 新品上市</string>
    <string name="g_004">shes仿水晶花朵网纱窄丝巾小方巾女百搭飘带长巾diy领结巾长款</string>
    <string name="g_005">苹果无线蓝牙耳机触控双耳通话iphonexs max原装运动正品i7耳塞式入耳式8plus重低音X迷你跑步开车通用白</string>
    <string name="g_006">HP/惠普 GK100机械键盘青轴黑轴茶轴红轴游戏吃鸡台式笔记本电脑办公有线外接</string>
    <string name="g_007">黑爵真机械键盘鼠标耳机三件套装青轴黑轴家用外接游戏电竞外设台式电脑笔记本有线网吧网咖吃鸡机械键鼠套装</string>
    <string name="g_008">Razer/雷蛇黑寡妇+锐蝮蛇竞技版RGB背光粉晶机械键盘游戏鼠标套装</string>
    <string name="g_009">TeenieWeenie小熊冬女休闲刺绣短款羽绒服TTJD74T06A</string>
    <string name="g_010">shes配饰你是我的二分之一系列羊毛爱心撞色秋冬保暖儿童围巾</string>
    <string name="g_011">小众设计Vintage复古天然珍珠手链女手饰流行饰品网红百搭双层</string>
    <string name="g_012">TeenieWeenie小熊2018秋冬新款女装毛呢外套休闲中长款呢子大衣</string>
    <string name="g_013">THEONE秋冬新款法式甜美重工钉珠亮片水貂绒木耳边柔软套头毛衣女</string>
    <string name="g_014">视觉味道进口手工简约北欧现代田园羊毛软包凳脚凳沙发凳矮凳墩子</string>
    <string name="g_015">德国KAWECO PERKEO撞色系列钢笔日常书写练字送礼学生手账</string>
    <string name="g_016">施华洛世奇ELDERFLOWER手链女士玫瑰金花朵装饰手镯百搭潮首饰</string>
    <string name="g_017">pure friend正品发饰大方块 冰糖简约发饰发圈皮筋</string>
    <string name="g_018">Goddess高档艺术红酒杯水晶对杯礼盒 设计师款小众精品</string>
    <string name="g_019">ipluso意索旗舰店城市钢笔成人练字礼盒装女生送礼年会定制刻字圣诞节礼物商务男士书法硬笔墨水套装</string>
    <string name="g_020">玻璃小号茶叶罐 陶瓷密封包装罐家用 迷你茶盒装茶叶罐紫砂存茶罐</string>
    <string name="g_021">袋鼠拉杆箱20寸行李箱女万向轮密码箱子旅行箱男学生24寸大容量</string>
    <string name="g_022">igtt旅行箱ins网红行李箱女万向轮20拉杆箱韩版潮男24登机密码箱</string>
    <string name="shop_001">Nina</string>
    <string name="shop_002">茉莉和扶苏服装店</string>
    <string name="shop_003">中信书店</string>
    <string name="shopMessage_001">[验收提醒]</string>
    <string name="shopMessage_002">清空购物车！888元红包！速来！</string>
    <string name="shopMessage_003">专为你推荐！快来看看！</string>
    <string name="shopTime_001">星期三</string>
    <string name="shopTime_002">18/12/18</string>
    <string name="shopTime_003">18/12/12</string>
    <string name="homeSearchBarHint">银河系漫游指南</string>
    <string name="set_001">我的钱包</string>
    <string name="set_002">我的收藏</string>
    <string name="set_003">我的卡券</string>
    <string name="set_004">人脸信息</string>
    <string name="set_005">关于我们</string>
    <string name="shops">商家</string>
    <string name="message">消息</string>
    <string name="self">个人中心</string>
</resources>