<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:roundiv="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bgcolor">

    <!--头开始-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/themeColor">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shops"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_margin="2dp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <!--头结束-->

    <!--商家内容开始-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--一个商家开始-->
            <LinearLayout
                style="@style/shopsOutline">
                <!--商家的信息开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">
                    <ImageView
                        style="@style/shopsHead"
                        android:src="@drawable/shop1_0" />
                    <TextView
                        style="@style/shopsName"
                        android:text="@string/shop_001"/>
                    <ImageView
                        style="@style/shopsFollowButton"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!--商家的信息结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_1"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_2"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_3"/>
                </LinearLayout>
                <!--一行图片结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_4"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_5"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_6"/>
                </LinearLayout>
                <!--一行图片结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_7"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_8"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop1_9"/>
                </LinearLayout>
                <!--一行图片结束-->
            </LinearLayout>
            <!--一个商家结束-->
            <!--一个商家开始-->
            <LinearLayout
                style="@style/shopsOutline">
                <!--商家的信息开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">
                    <ImageView
                        style="@style/shopsHead"
                        android:src="@drawable/shop2_0" />
                    <TextView
                        style="@style/shopsName"
                        android:text="@string/shop_002"/>
                    <ImageView
                        style="@style/shopsFollowButton"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!--商家的信息结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_1"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_2"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_3"/>
                </LinearLayout>
                <!--一行图片结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_4"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_5"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_6"/>
                </LinearLayout>
                <!--一行图片结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_7"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_8"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop2_9"/>
                </LinearLayout>
                <!--一行图片结束-->
            </LinearLayout>
            <!--一个商家结束-->
            <!--一个商家开始-->
            <LinearLayout
                style="@style/shopsOutline">
                <!--商家的信息开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">
                    <ImageView
                        style="@style/shopsHead"
                        android:src="@drawable/shop3_0" />
                    <TextView
                        style="@style/shopsName"
                        android:text="@string/shop_003"/>
                    <ImageView
                        style="@style/shopsFollowButton"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!--商家的信息结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_1"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_2"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_3"/>
                </LinearLayout>
                <!--一行图片结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_4"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_5"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_6"/>
                </LinearLayout>
                <!--一行图片结束-->
                <!--一行图片开始-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_7"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_8"/>
                    <frontend.shoppingmall.CustomRoundAngleImageView
                        style="@style/shopsImageView"
                        roundiv:radius="10dp"
                        android:src="@drawable/shop3_9"/>
                </LinearLayout>
                <!--一行图片结束-->
            </LinearLayout>
            <!--一个商家结束-->
        </LinearLayout>
    </ScrollView>
    <!--商家内容结束-->

    <!--底开始-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/bottomBar">
        <ImageButton
            android:id="@+id/shopToHome"
            android:src="@drawable/home_normal"
            style="@style/bottomBarButton"/>
        <ImageButton
            android:src="@drawable/shop_on_press"
            style="@style/bottomBarButton"/>
        <ImageButton
            android:id="@+id/shopToMessage"
            android:src="@drawable/message_normal"
            style="@style/bottomBarButton"/>
        <ImageButton
            android:id="@+id/shopToSelf"
            android:src="@drawable/self_normal"
            style="@style/bottomBarButton"/>
    </LinearLayout>
    <!--底结束-->

</LinearLayout>

